# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "youtube_downloader"
description = "YoutubeDL GUI wrapper written in rust"
authors = ["Raphaël Cima <atlasrw@icloud.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.bundle]
name = "YouTube Downloader"
icon = [
    "icons/16x16.png",
    "icons/32x32.png",
    "icons/64x64.png",
    "icons/128x128.png",
    "icons/256x256.png",
    "icons/512x512.png",
]
copyright = "Copyright © Raphaël Cima 2024. All rights reserved."

[dependencies]
eframe = "0.26.2"
serde_json = "1.0.114"
youtube_dl = "0.9.0"
env_logger = "0.11"
